--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "pizepei/config-ng": "dev-master",
         "pizepei/model": "dev-master",
         "pizepei/func": "dev-master",
+        "pizepei/helper": "dev-master",
         "pizepei/wechat":"dev-master",
         "pizepei/encryption":"dev-master",
         "php": ">=7.0.0",
